# christmasTree

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
data/: backup.json
deploy/: nginx.conf  pixeltree.service
frontend/: index.html
frontend/src/: App.jsx  index.css
frontend/src/components/: EmojiPalette.jsx  FallingItems.jsx  GameCanvas.jsx  MessageInput.jsx  Palette.jsx  Status.jsx
