[package]
name = "pixel-tree-backend"
version = "1.0.0"
edition = "2021"
description = "Real-time collaborative pixel art Christmas tree backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# WebSocket
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
